--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # main text of home
-title: John Doe
-bio: A Person who travels the world eating noodles
+title: David Ramos
+bio: Threat Intelligence | Ethical Hacker | CTF Player
 
 # twitter summary info
 description: A blog about technology and stuff related
